[tool.poetry]
name = "project-init-tools"
version = "0.18.0"
description = "Tools to help initialize/setup github projects, install prerequisites, etc."
authors = [ "Sam McKelvie <dev@mckelvie.org>" ]
license = "MIT"
keywords = [ "apt-get", "sudo", "install", "prerequisites", "setup", "initialization" ]
readme = "README.md"
homepage = "https://github.com/sammck/project-init-tools"
repository = "https://github.com/sammck/project-init-tools.git"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
packaging = "^21.3" # used for version string comparison
PyYAML = ">=5.4.1 <7.0.0"
"ruamel.yaml" = "^0.17.21"
tomlkit = "^0.10.1"
boto3 = "^1.21.37"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
dunamai = "^1.9.0"
python-semantic-release = "^7.25.2"
types-urllib3 = "^1.26.11"
types-PyYAML = ">=5.4.12 <7.0.0"
pylint = "^2.13.5"
boto3-stubs = "^1.21.37"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]

[tool.semantic_release]
version_variable = 'project_init_tools/version.py:__version__'
version_toml = 'pyproject.toml:tool.poetry.version'
branch = 'main'
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "wrong-import-order",
    "duplicate-code",
    "too-many-arguments",
    "missing-function-docstring",
    "import-outside-toplevel",
    "too-few-public-methods",
    "missing-class-docstring",
    "unused-import",
    "too-many-locals",
    "unused-argument",
    "invalid-name",
    "no-self-use",
    "global-statement",
    "broad-except",
    "too-many-branches",
    "too-many-statements",
    "too-many-lines",
    "exec-used",
    "ungrouped-imports",
    "subprocess-popen-preexec-fn",
    "multiple-statements",
    "too-many-public-methods",
    "missing-module-docstring",
    "too-many-instance-attributes",
    "too-many-nested-blocks",
    "unneeded-not",
    "unnecessary-lambda",
  ]

[tool.pylint.MASTER]
ignore=[
    ".venv"
  ]

[tool.pylint.FORMAT]
indent-after-paren=4
indent-string='  '
max-line-length=200
