[tool.pdm]
distribution = true

[tool.pdm.build]
includes = []
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.semantic_release]
version_variable = 'project_init_tools/version.py:__version__'
version_toml = './pyproject.toml:project.version'
branch = 'main'
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.pylint.'MESSAGES CONTROL']
disable=[
    "wrong-import-order",
    "duplicate-code",
    "too-many-arguments",
    "missing-function-docstring",
    "import-outside-toplevel",
    "too-few-public-methods",
    "missing-class-docstring",
    "unused-import",
    "too-many-locals",
    "unused-argument",
    "invalid-name",
    "no-self-use",
    "global-statement",
    "broad-except",
    "too-many-branches",
    "too-many-statements",
    "too-many-lines",
    "exec-used",
    "ungrouped-imports",
    "subprocess-popen-preexec-fn",
    "multiple-statements",
    "too-many-public-methods",
    "missing-module-docstring",
    "too-many-instance-attributes",
    "too-many-nested-blocks",
    "unneeded-not",
    "unnecessary-lambda",
  ]

[tool.pylint.MASTER]
ignore=[
    ".venv"
  ]

[tool.pylint.FORMAT]
indent-after-paren=4
indent-string='  '
max-line-length=200

[project]
name = "project-init-tools"
version = "1.2.0"
description = "Tools to help initialize/setup github projects, install prerequisites, etc."
authors = [
    {name = "Sam McKelvie", email = "dev@mckelvie.org"},
]
dependencies=[
  "colorama>=0.3.9",
  "PyYAML>=5.3.1",
  "ruamel-yaml>=0.16.13",
  "tomlkit>=0.13.2",
  "boto3>=1.35.83",
  "pip>=24.3.1",
 ]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}
keywords = ["apt-get", "sudo", "install", "prerequisites", "setup", "initialization"]

[project.urls]
homepage = "https://github.com/sammck/project-init-tools"
repository = "https://github.com/sammck/project-init-tools.git"

[project.scripts]
project-init-tools = "project_init_tools.__main__:main_script"

[dependency-groups]
dev = [
    "mypy>=1.13.0",
    "dunamai>=1.23.0",
    "python-semantic-release>=9.15.2",
    "types-urllib3>=1.26.25.14",
    "types-PyYAML>=6.0.12.20240917",
    "pylint>=3.3.2",
    "boto3-stubs>=1.35.83",
]
